update large data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>UiTM</title>
 </head>
 <body>
+    <img src="logoteknik.png" alt="UiTM" width="200px" >
+        <br />
     <h1> Universiti Teknologi Mara</h1>
+    Puncak Perdana
 </body>
 </html>
